[tool.poetry]
name = "Stylegan3 VJ"
version = "0.1.0"
description = ""
authors = ["Ryo Okada"]

[tool.poetry.dependencies]
python = "^3.8.10"
pysen = "^0.10.1"
imageio = "^2.13.3"
imageio-ffmpeg = "0.4.4"
pyspng = "0.1.0"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pysen = {version = "0.10.1", extras = ["lint"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py37"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]